# logging

./: Cargo.toml  README.md  build.rs  shell.nix  todo.md
.github/workflows/: rust.yml
backend/: .gitignore  Cargo.toml  build.rs
backend/migrations/: 0001_log_table.sql
backend/proto/: logging.proto
backend/src/: main.rs
backend/src/core/: database.rs  mod.rs
backend/src/grpc/: mod.rs  server.rs
frontend/src/app/: layout.tsx
frontend/src/components/: Header.tsx
lib/: lib.rs  macros.rs  proto.rs
migrations/: 0001_log_table.sql
proto/: logging.proto
src/: main.rs
src/core/: database.rs  mod.rs
src/grpc/: mod.rs  server.rs
testing/: test.json
